[tool.poetry]
name = "ecs_scaling_scheduler"
version = "0.1.0"
description = "Functions triggered on events to manage ECS Services scaling activities"
authors = ["johnpreston <john@compose-x.io>"]
license = "MPL-2.0"
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
compose-x-common = "^1.2"
boto3 = "^1.21"

[tool.poetry.dev-dependencies]
black = "^23.1"
isort = "^5.9.3"
coverage = "^6.5"
pytest = "^7.1"
pre-commit = "^3.1"
tbump = "^6.9"
placebo = "^0.10.0"
cleanpy = "^0.3.1"
pyupgrade = "^3.0.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "kelvin"

[tool.coverage.report]
exclude_lines = [
  "if __name__ == '__main__'"
]
[tool.coverage.run]
omit = [
  "*/cli.py"
]

[tool.tbump]
github_url = "https://github.com/compose-x/ecs_scaling_scheduler"

[tool.tbump.version]
current = "0.1.0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "ecs_scaling_scheduler/__init__.py"

[[tool.tbump.before_commit]]
name = "Files format"
cmd = "make conform"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
